2006-03-21 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the AT90USB646/647/1286/1287 support.
	* devtools/gen-avr-lib-tree.sh: add support for AT90USB646/647/1286/1287.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iousb646.h: new file.
	* include/avr/iousb647.h: new file.
	* include/avr/iousb1286.h: new file.
	* include/avr/iousb1287.h: new file.
	* include/avr/iousbxx6_7.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for AT90USB646/647/1286/1287.
	* doc/api/using-tools.dox: (Ditto.)

2006-03-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jeff Dombach:
	* include/avr/iomxx0_1.h: Fix bit name PRUSART3.

2006-03-14 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iom169.h(LCDBD, LCDCCD): Add.
	[Add support ATmega169 Rev. F device]

2006-03-14 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iom165.h: Add 'PINxy', 'DDxy' and 'Pxy' bits.
	* include/avr/iom325.h: (Ditto.).
	* include/avr/iom3250.h: (Ditto.).
	* include/avr/iom329.h: (Ditto.).
	* include/avr/iom3290.h: (Ditto.).
	* include/avr/iom645.h: (Ditto.).
	* include/avr/iom6450.h: (Ditto.).
	* include/avr/iom649.h: (Ditto.).
	* include/avr/iom6490.h: (Ditto.).

2006-03-10 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iomxx0_1.h: Rename port pins from PORTxy to Pxy.
	* include/avr/portpins.h: Add PORTHy, PORTJy, PORTKy and PORTHLy.
	[Fixed bug #16039]

2006-03-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/boot.h: Do not depend on __USING_MINT8 anymore.

2006-03-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Notified by Peter Schrepfer:
	* doc/examples/demo/iocompat.h: Fix OCR1A location
	for ATmega16/32 (broken in rev 1.2).

2006-03-06 Anatoly Sokolov <aesok@post.ru>

	* libc/misc/mul10.S: Use X_movw.

2006-03-04 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/fplib.inc (mLPMRdZpp, LPMRdZpp): Delete.
	* libm/fplib/fp_flashconst.S: Use X_lpm.
	* libm/fplib/fp_powerseries.S: (Ditto.).
